2002-04-24  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix PR automake/315:
	* automake.in (subobjname): Rewrite to generate variable name
	unique for each content.
	(%substnums): Remove.
	(%subobjvar): New hash.
	(initialize_per_input): Clear %subobjvar.
	(define_objects_from_sources): Return the name of the variable
	defined, in addition to the linker.  Call subobjname only once
	the content of the variable to define is known.
	(handle_source_transform): Adjust call to define_objects_from_sources.
	* tests/specflags8.test: Mention PR 315.
	* tests/subobjname.test: New file.
	* tests/Makefile.am (XFAIL_TESTS): Remove specflags8.test.
	(TESTS): Add subobjname.test.

2002-04-23  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* m4/depout.m4 (_AM_OUTPUT_DEPENDENCY_COMMANDS): Grep
	the whole file for 'generated by automake', not only the
	first line.  This accounts for post-processed Makefile.in's.
	* tests/postproc.test: New file.
	* tests/Makefile.am (TESTS): Add postproc.test.

2002-04-22  Alexandre Duret-Lutz  <duret_g@epita.fr>

	For PR automake/151 and PR automake/314:
	* automake.texi (A Program): Split into
	(Program Sources, Linking, Conditional Sources, Conditional
	Programs): ... these subsections; moving the Linking node
	before the Conditional discussions.
	(Conditional Sources): More details.  Notably, mention
	hello_DEPENDENCIES.
	(Conditionals): Adjust reference to Conditional Programs.

2002-04-19  Paul Eggert  <eggert@twinsun.com>

	Fix some problems when using "$@" when there might be zero
	positional arguments in cases where this matters.  Zsh doesn't
	support the workaround ${1+"$@"} that has been used by
	Automake since the Mon Dec 4 11:55:36 1995 change.  Zsh is
	used as /bin/sh in MacOS X, so this problem needs to be worked
	around.

	* aclocal.in: Use 'case' statement to work around problem.
	* automake.in: Likewise.
	* lib/ylwrap: Likewise.
	* lib/missing: No need for workaround, as the command is never
	invoked with zero arguments.