@@ -96,6 +96,7 @@ L. Peter Deutsch	ghost@aladdin.com
 Larry Jones		larry.jones@sdrc.com
 Lars Hecking		lhecking@nmrc.ucc.ie
 Lars J. Aas		larsa@sim.no
+Laurent Morichetti	laurentm@cup.hp.com
 Maciej Stachowiak	mstachow@mit.edu
 Maciej W. Rozycki	macro@ds2.pg.gda.pl
 Manu Rouat		emmanuel.rouat@wanadoo.fr
