@@ -272,6 +272,7 @@ pr287.test \
 pr300-lib.test \
 pr300-ltlib.test \
 pr300-prog.test \
+pr307.test \
 prefix.test \
 primary.test \
 primary2.test \
