@@ -1,3 +1,14 @@
+2002-04-25  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	For PR automake/307:
+	* lib/depcomp: Never compute dependencies in the background, this
+	can cause races with libtool.  Compute the dependencies after
+	the actual compilation.  Don't make libtool silent now that
+	it's run in the foreground.
+	* tests/pr307.test: New file.
+	* tests/Makefile.am (TESTS): Add pr307.test.
+	Reported by Laurent Morichetti.
+
 2002-04-24  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	Fix PR automake/315:
